# fastdotcom2

./: README.md  pyproject.toml
src/fastdotcom2/: __init__.py
